crates/wac-parser/tests/resolution/fail/spread-instantiation-no-match.wac
package test:comp;

import i: interface {
};

let x = new foo:bar { ...i };
